--- a/yueting/src/main/res/yueting/common/layout/music_include_yue_ting_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_include_yue_ting_play.xml
@@ -66,7 +66,7 @@
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="@color/colorMusicName"
-                android:textSize="@dimen/dimenNameTextSize" />
+                android:textSize="@dimen/sizeText18dp" />
 
             <TextView
                 android:id="@+id/musicInfoDetailTv"
@@ -77,7 +77,7 @@
                 android:gravity="center_vertical"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textSize="@dimen/dimenSmallNameTextSize" />
+                android:textSize="@dimen/sizeText12dp" />
         </LinearLayout>
 
 
@@ -86,8 +86,8 @@
             android:layout_width="@dimen/dimenButtonW"
             android:layout_height="@dimen/dimenButtonH"
             android:layout_gravity="center"
-            android:paddingLeft="@dimen/dimenPadding"
-            android:paddingRight="@dimen/dimenPadding"
+            android:paddingLeft="@dimen/dimenPadding5dp"
+            android:paddingRight="@dimen/dimenPadding5dp"
             android:src="@drawable/music_level_list_type"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -98,8 +98,8 @@
             android:layout_height="@dimen/dimenButtonH"
             android:layout_gravity="center"
             android:gravity="center"
-            android:paddingLeft="@dimen/dimenPadding"
-            android:paddingRight="@dimen/dimenPadding"
+            android:paddingLeft="@dimen/dimenPadding5dp"
+            android:paddingRight="@dimen/dimenPadding5dp"
             android:src="@drawable/music_selector_previous" />
 
         <FrameLayout
@@ -123,8 +123,8 @@
                 android:layout_height="@dimen/dimenButtonW"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:paddingLeft="@dimen/dimenPadding"
-                android:paddingRight="@dimen/dimenPadding"
+                android:paddingLeft="@dimen/dimenPadding5dp"
+                android:paddingRight="@dimen/dimenPadding5dp"
                 android:src="@drawable/music_level_list_play" />
         </FrameLayout>
 
@@ -134,8 +134,8 @@
             android:layout_height="@dimen/dimenButtonH"
             android:layout_gravity="center"
             android:gravity="center"
-            android:paddingLeft="@dimen/dimenPadding"
-            android:paddingRight="@dimen/dimenPadding"
+            android:paddingLeft="@dimen/dimenPadding5dp"
+            android:paddingRight="@dimen/dimenPadding5dp"
             android:src="@drawable/music_selector_next" />
 
     </LinearLayout>
