--- a/yueting/src/main/res/yueting/common/layout/music_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_list_item.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textSize="@dimen/dimenNameTextSize" />
+                android:textSize="@dimen/sizeText18dp" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:textSize="@dimen/dimenSmallNameTextSize" />
+                    android:textSize="@dimen/sizeText12dp" />
 
                 <TextView
                     android:id="@+id/tv_play_time"
@@ -55,7 +55,7 @@
                     android:ellipsize="end"
                     android:gravity="right"
                     android:maxLines="1"
-                    android:textSize="@dimen/dimenSmallNameTextSize" />
+                    android:textSize="@dimen/sizeText12dp" />
             </FrameLayout>
         </LinearLayout>
 
