--- a/yueting/src/main/res/yueting/common/layout/read_activity_catalog.xml
+++ b/yueting/src/main/res/yueting/common/layout/read_activity_catalog.xml
@@ -47,12 +47,12 @@
                 android:background="@null"
                 android:button="@null"
                 android:checked="true"
-                android:drawablePadding="@dimen/dimenPadding"
+                android:drawablePadding="@dimen/dimenPadding5dp"
                 android:gravity="center"
-                android:paddingTop="@dimen/dimenPadding"
+                android:paddingTop="@dimen/dimenPadding5dp"
                 android:text="目录"
                 android:textColor="@color/main_selector_tab_text"
-                android:textSize="@dimen/dimenNameTextSize" />
+                android:textSize="@dimen/sizeText18dp" />
 
             <RadioButton
                 android:id="@+id/rb_bookMark_title"
@@ -62,12 +62,12 @@
                 android:background="@null"
                 android:button="@null"
                 android:checked="false"
-                android:drawablePadding="@dimen/dimenPadding"
+                android:drawablePadding="@dimen/dimenPadding5dp"
                 android:gravity="center"
-                android:paddingTop="@dimen/dimenPadding"
+                android:paddingTop="@dimen/dimenPadding5dp"
                 android:text="书签"
                 android:textColor="@color/main_selector_tab_text"
-                android:textSize="@dimen/dimenNameTextSize" />
+                android:textSize="@dimen/sizeText18dp" />
         </RadioGroup>
     </android.support.constraint.ConstraintLayout>
 
