--- a/yueting/src/main/res/yueting/home/layout/main_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/main_fragment_home.xml
@@ -30,9 +30,9 @@
         android:layout_height="@dimen/dimenButtonH"
         android:background="@drawable/common_ripple_title"
         android:drawableRight="@drawable/common_level_list_title"
-        android:padding="@dimen/dimenPadding"
+        android:padding="@dimen/dimenPadding5dp"
         android:text="悦读"
-        android:textSize="@dimen/dimenBigTextSize" />
+        android:textSize="@dimen/sizeText20dp" />
 
     <include layout="@layout/main_include_lv_content" />
 
