--- a/yueting/src/main/res/yueting/read/layout/read_list_item_catelog.xml
+++ b/yueting/src/main/res/yueting/read/layout/read_list_item_catelog.xml
@@ -12,8 +12,8 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="3"
-        android:paddingLeft="@dimen/dimenLongPadding"
-        android:textSize="@dimen/dimenMiddleTextSize"
+        android:paddingLeft="@dimen/dimenPadding10dp"
+        android:textSize="@dimen/sizeText15dp"
         android:textStyle="bold" />
 
     <View
