YueTingList now is joined

--- a/yueting/src/main/res/values/dimens.xml
+++ b/yueting/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <dimen name="dimenExtraView">50dp</dimen>
+    <dimen name="dimenViewHeight150dp">150dp</dimen>
     <dimen name="dimenMargin">10dp</dimen>
     <dimen name="sizeText20dp">20dp</dimen>
     <dimen name="sizeText18dp">18dp</dimen>
