modify Book's Table,TabHomeFragment and FileActivity

--- a/yueting/src/main/res/yueting/common/layout/main_title_fragment_list.xml
+++ b/yueting/src/main/res/yueting/common/layout/main_title_fragment_list.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/bgIv"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimenViewHeight150dp"
+        android:background="@drawable/common_level_list_header"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ListView
         android:id="@+id/typeLv"
-        android:scrollbars="none"
-        android:overScrollMode="never"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        app:layout_constraintTop_toBottomOf="@+id/bgIv" />
 
 </android.support.constraint.ConstraintLayout>
