--- a/yueting/src/main/res/yueting/common/layout/main_activity_yueting_list.xml
+++ b/yueting/src/main/res/yueting/common/layout/main_activity_yueting_list.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="@dimen/dimenMargin"
         android:layout_marginRight="@dimen/dimenMargin"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/bgIv"
+        app:layout_constraintBottom_toTopOf="@+id/contentVp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topV"
@@ -36,19 +36,13 @@
 
     </android.support.design.widget.TabLayout>
 
-    <ImageView
-        android:id="@+id/bgIv"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimenViewHeight150dp"
-        app:layout_constraintBottom_toTopOf="@+id/contentVp"
-        app:layout_constraintTop_toBottomOf="@+id/titleTl" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/contentVp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bgIv"
+        app:layout_constraintTop_toBottomOf="@+id/titleTl"
         app:layout_constraintVertical_weight="1" />
 
 </android.support.constraint.ConstraintLayout>
