--- a/yueting/src/main/res/yueting/common/layout/manage_dialog_bottom.xml
+++ b/yueting/src/main/res/yueting/common/layout/manage_dialog_bottom.xml
@@ -1,20 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dimenExtraView"
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:background="@color/colorPageGreen"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/tv_remove_items"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_ripple_dialog"
         android:gravity="center"
+        android:paddingBottom="@dimen/dimenPadding5dp"
+        android:paddingTop="@dimen/dimenPadding5dp"
         android:text="删除"
-        android:textSize="@dimen/dimenDialogBottomTextSize"
+        android:textSize="@dimen/sizeText15dp"
         android:textStyle="bold" />
 
-</android.support.constraint.ConstraintLayout>
+    <View style="@style/DividerStyle" />
+
+    <TextView
+        android:id="@+id/tv_look_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_ripple_dialog"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dimenPadding5dp"
+        android:paddingTop="@dimen/dimenPadding5dp"
+        android:text="查看详情"
+        android:textSize="@dimen/sizeText15dp"
+        android:textStyle="bold" />
+
+    <View style="@style/DividerStyle" />
+
+    <TextView
+        android:id="@+id/tv_manage_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_ripple_dialog"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dimenPadding5dp"
+        android:paddingTop="@dimen/dimenPadding5dp"
+        android:text="管理列表"
+        android:textSize="@dimen/sizeText15dp"
+        android:textStyle="bold" />
+
+    <View style="@style/DividerStyle" />
+
+    <TextView
+        android:id="@+id/tv_move_items"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_ripple_dialog"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dimenPadding5dp"
+        android:paddingTop="@dimen/dimenPadding5dp"
+        android:text="移动到歌单"
+        android:textSize="@dimen/sizeText15dp"
+        android:textStyle="bold" />
+
+    <View style="@style/DividerStyle" />
+
+</LinearLayout>
