--- a/yueting/src/main/res/yueting/common/layout/title_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/title_list_item.xml
@@ -2,14 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_read_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dimenReadListItemH"
+    android:layout_height="@dimen/dimenView50dp"
     android:background="@drawable/common_ripple_item"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/titleNameTv"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimenExtraView"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:drawableLeft="@drawable/common_level_list_title"
         android:drawablePadding="@dimen/dimenReadListItemPadding"
