--- a/yueting/src/main/res/yueting/home/layout/main_fragment_home.xml
+++ b/yueting/src/main/res/yueting/home/layout/main_fragment_home.xml
@@ -15,6 +15,16 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/backIv"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dimenView40dp"
+            android:background="@drawable/common_ripple_title"
+            android:src="@drawable/common_selector_back"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/titleNameTv" />
+
         <TextView
             android:id="@+id/titleNameTv"
             android:layout_width="0dp"
@@ -26,7 +36,7 @@
             android:text="悦读"
             android:textSize="@dimen/sizeText20dp"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/backIv"
             app:layout_constraintRight_toLeftOf="@+id/addFileIv" />
 
         <ImageView
@@ -36,6 +46,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="@dimen/dimenReadMargin"
             android:background="@drawable/common_selector_add_op"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintLeft_toRightOf="@+id/titleNameTv"
             app:layout_constraintRight_toRightOf="parent" />
     </android.support.constraint.ConstraintLayout>
