--- a/yueting/src/main/res/yueting/common/layout/manage_pop_view_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/manage_pop_view_item.xml
@@ -19,8 +19,24 @@
 
     <View style="@style/DividerStyle" />
 
+
+
     <TextView
-        android:id="@+id/tv_look_items"
+        android:id="@+id/batchDeleteTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/common_ripple_dialog"
+        android:gravity="center"
+        android:paddingBottom="@dimen/dimenPadding5dp"
+        android:paddingTop="@dimen/dimenPadding5dp"
+        android:text="批量删除"
+        android:textSize="@dimen/sizeText15dp"
+        android:textStyle="bold" />
+
+    <View style="@style/DividerStyle" />
+
+    <TextView
+        android:id="@+id/lookDetailsTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/common_ripple_dialog"
@@ -34,21 +50,7 @@
     <View style="@style/DividerStyle" />
 
     <TextView
-        android:id="@+id/tv_manage_items"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/common_ripple_dialog"
-        android:gravity="center"
-        android:paddingBottom="@dimen/dimenPadding5dp"
-        android:paddingTop="@dimen/dimenPadding5dp"
-        android:text="管理列表"
-        android:textSize="@dimen/sizeText15dp"
-        android:textStyle="bold" />
-
-    <View style="@style/DividerStyle" />
-
-    <TextView
-        android:id="@+id/tv_move_items"
+        android:id="@+id/moveItemsTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/common_ripple_dialog"
