--- a/yueting/src/main/res/yueting/common/layout/manage_pop_view_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/manage_pop_view_item.xml
@@ -22,14 +22,14 @@
 
 
     <TextView
-        android:id="@+id/batchDeleteTv"
+        android:id="@+id/manageItemTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/common_ripple_dialog"
         android:gravity="center"
         android:paddingBottom="@dimen/dimenPadding5dp"
         android:paddingTop="@dimen/dimenPadding5dp"
-        android:text="批量删除"
+        android:text="管理书籍"
         android:textSize="@dimen/sizeText15dp"
         android:textStyle="bold" />
 
