--- a/yueting/src/main/res/values/styles.xml
+++ b/yueting/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
         <item name="android:paddingLeft">@dimen/dimenPadding10dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:src">@drawable/common_level_list_select</item>
+        <item name="android:background">@drawable/common_level_list_select</item>
     </style>
 
     <style name="DividerStyle">
