--- a/yueting/src/main/res/values/styles.xml
+++ b/yueting/src/main/res/values/styles.xml
@@ -77,10 +77,9 @@
     </style>
 
     <style name="SelectViewStyle">
-        <item name="android:paddingRight">@dimen/dimenPadding10dp</item>
-        <item name="android:paddingLeft">@dimen/dimenPadding10dp</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:padding">@dimen/dimenPadding5dp</item>
+        <item name="android:layout_width">@dimen/dimenView40dp</item>
+        <item name="android:layout_height">@dimen/dimenView40dp</item>
         <item name="android:background">@drawable/common_level_list_select</item>
     </style>
 
