--- a/yueting/src/main/res/yueting/common/layout/common_item_detail.xml
+++ b/yueting/src/main/res/yueting/common/layout/common_item_detail.xml
@@ -2,23 +2,98 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
-    <TextView
-        android:id="@+id/itemNameTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/ownerTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/localPathTv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/sizeTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/dimenView40dp"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/itemNameTitleTv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="名称:"
+            android:textSize="@dimen/sizeText18dp" />
+
+        <TextView
+            android:id="@+id/itemNameTv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimenPadding10dp"
+            android:text="名字"
+            android:textSize="@dimen/sizeText15dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimenView40dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/ownerTitleTv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="所有人:"
+            android:textSize="@dimen/sizeText18dp" />
+
+        <TextView
+            android:id="@+id/ownerTv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimenPadding10dp"
+            android:textSize="@dimen/sizeText15dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimenView40dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="本地路径:"
+            android:textSize="@dimen/sizeText18dp" />
+
+        <TextView
+            android:id="@+id/localPathTv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimenPadding10dp"
+            android:textSize="@dimen/sizeText15dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dimenView40dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/sizeTitleTv"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="大小:"
+            android:textSize="@dimen/sizeText18dp" />
+
+        <TextView
+            android:id="@+id/sizeTv"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/dimenPadding10dp"
+            android:textSize="@dimen/sizeText15dp" />
+    </LinearLayout>
 </LinearLayout>
