--- a/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
+++ b/yueting/src/main/res/yueting/common/layout/file_activity_file.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +9,20 @@
     tools:context="com.aqrlei.graduation.yueting.ui.FileActivity">
 
     <View
+        android:id="@+id/topV"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimenViewHeight"
-        android:background="@color/colorWhite" />
+        android:background="@color/colorWhite"
+        app:layout_constraintBottom_toTopOf="@+id/headerTopFl"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
+        android:id="@+id/headerTopFl"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimenTitleHeight"
-        android:background="@color/colorTitleBarGrey">
+        android:background="@color/colorTitleBarGrey"
+        app:layout_constraintBottom_toTopOf="@+id/dividerV1"
+        app:layout_constraintTop_toBottomOf="@+id/topV">
 
         <ImageView
             android:id="@+id/backIv"
@@ -28,10 +35,15 @@
         <ImageView
             android:id="@+id/addFileIv"
             style="@style/SelectViewStyle"
-            android:layout_gravity="right" />
+            android:layout_gravity="right"
+            android:visibility="gone" />
     </FrameLayout>
 
-    <View style="@style/DividerStyle" />
+    <View
+        android:id="@+id/dividerV1"
+        style="@style/DividerStyle"
+        app:layout_constraintBottom_toTopOf="@+id/tv_file_parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerTopFl" />
 
     <TextView
         android:id="@+id/tv_file_parent"
@@ -42,17 +54,25 @@
         android:gravity="center_vertical"
         android:maxLines="1"
         android:textSize="@dimen/sizeText12dp"
+        app:layout_constraintBottom_toTopOf="@+id/dividerV2"
+        app:layout_constraintTop_toBottomOf="@+id/dividerV1"
         tools:text="/dev" />
 
-    <View style="@style/DividerStyle" />
+    <View
+        android:id="@+id/dividerV2"
+        style="@style/DividerStyle"
+        app:layout_constraintBottom_toTopOf="@+id/lv_file"
+        app:layout_constraintTop_toBottomOf="@+id/tv_file_parent" />
 
     <ListView
         android:id="@+id/lv_file"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:overScrollMode="never"
-        android:scrollbars="none" />
+        android:scrollbars="none"
+        app:layout_constraintBottom_toTopOf="@+id/sureTv"
+        app:layout_constraintTop_toBottomOf="@+id/dividerV2"
+        app:layout_constraintVertical_weight="1" />
 
     <TextView
         android:id="@+id/sureTv"
@@ -60,8 +80,10 @@
         android:layout_height="@dimen/dimenView40dp"
         android:background="@drawable/common_ripple_item"
         android:gravity="center"
-        android:text="确定"
+        android:text="添加选中"
         android:textSize="@dimen/sizeText20dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
