--- a/yueting/src/main/res/yueting/common/layout/music_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_list_item.xml
@@ -14,7 +14,7 @@
             android:layout_width="@dimen/dimenListItemFL"
             android:layout_height="@dimen/dimenListItemFL"
             android:layout_margin="@dimen/dimenListItemFLM">
-            <com.facebook.drawee.view.SimpleDraweeView
+            <ImageView
                 android:id="@+id/sdv_music_picture"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
