--- a/yueting/src/main/res/yueting/common/layout/file_list_item.xml
+++ b/yueting/src/main/res/yueting/common/layout/file_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dimenView40dp"
     android:background="@android:color/white">
@@ -8,19 +8,19 @@
     <ImageView
         android:id="@+id/selectItemIv"
         style="@style/SelectViewStyle"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_gravity="right"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/fileNameTv"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/common_ripple_item"
         android:drawableLeft="@drawable/common_level_list_file"
         android:gravity="center_vertical"
+        android:paddingRight="@dimen/dimenPadding46dp"
         android:text="文件名"
-        android:textSize="@dimen/sizeText15dp"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintLeft_toRightOf="@+id/selectItemIv"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:textSize="@dimen/sizeText15dp" />
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
