--- a/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
+++ b/yueting/src/main/res/yueting/common/layout/music_activity_play.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@mipmap/ic_play_bg">
+        android:background="@drawable/play_shape_bg">
 
         <com.aqrlei.graduation.yueting.ui.view.VisualizerView
             android:id="@+id/vv_play"
