--- a/yueting/src/main/res/layout/welcome_activity_main.xml
+++ b/yueting/src/main/res/layout/welcome_activity_main.xml
@@ -2,11 +2,17 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cl_main"
-    android:background="@mipmap/ic_welcome_bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.aqrlei.graduation.yueting.ui.view.PathView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <com.aqrlei.graduation.yueting.ui.view.PathView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
     <Button
+        android:visibility="gone"
         android:id="@+id/bt_enjoy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
